# FlappyBirdAI

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
res/shaders/: fragment_deffered_mesh.glsl  vertex_deffered_mesh.glsl
src/: CMakeLists.txt  Engine.cpp  Engine.h  MeshData.cpp  MeshData.h  OpenGLMesh.cpp  OpenGLMesh.h  OpenGLMeshRenderer.cpp  OpenGLMeshRenderer.h  Shader.cpp  Shader.h  glad.c  main  main.cpp  test.cpp  test.h
src/core/: Core.cpp  Core.h  Engine.h
src/glad/: glad.h
